@@ -42,6 +42,8 @@ import maya.OpenMaya as OpenMaya
 import IECore
 import IECoreMaya
 
+import sys
+
 class TestParameterisedHolder( IECoreMaya.TestCase ) :
 
 	def __checkAllParameterPlugs( self, fnOH, parameter=None ) :
@@ -2010,6 +2012,62 @@ class TestParameterisedHolder( IECoreMaya.TestCase ) :
 		opNode = cmds.createNode( "ieOpHolderNode" )
 		fnOH = IECoreMaya.FnOpHolder( opNode )
 		self.assertRaises( RuntimeError, IECore.curry( fnOH.setOp, "fake", -1 ) )
+
+	def testShouldSave( self ) :
+		
+		class TestProcedural( IECore.ParameterisedProcedural ) :
+
+			def __init__( self ) :
+
+				IECore.ParameterisedProcedural.__init__( self, "" )
+
+				self.parameters().addParameter(
+
+					IECore.V3fParameter(
+						"halfSize",
+						"",
+						IECore.V3f( 0 )
+					)
+
+				)
+
+			def doBound( self, args ) :
+
+				return IECore.Box3f( -args["halfSize"].value, args["halfSize"].value )
+
+			def doRenderState( self, args ) :
+
+				pass
+
+			def doRender( self, args ) :
+
+				pass
+
+		node = cmds.createNode( "ieProceduralHolder" )
+		fnPH = IECoreMaya.FnParameterisedHolder( str( node ) )
+		p = TestProcedural()
+		fnPH.setParameterised( p )
+
+		cmds.setAttr( node + ".nodeState", 4 )
+
+
+		# Save the scene out so we can reference it
+		filename = os.path.join( os.getcwd(), "test", "IECoreMaya", "shouldSaveAttributes.ma")
+		cmds.file( rename = filename )
+		referenceScene = cmds.file( force = True, type = "mayaAscii", save = True )
+
+		mayaFile = open( filename, 'r' )
+		setAttrs = mayaFile.read().partition("createNode ieProceduralHolder")[2].partition("createNode")[0].split("\n")[1:]
+		splitAttrs = [i.split('"') for i in setAttrs if "setAttr" in i]
+		savedAttrNames = [ i[1] for i in splitAttrs if len(i) >= 2]
+		mayaFile.close()
+
+		self.assertTrue( ".nds" in savedAttrNames ) # Check that the nodeState attr we changed has been written
+		self.assertTrue( not ".ihi" in savedAttrNames ) # Check that the isHistoricallyInteresting parm that is left default is not exported
+
+		# Parm parameters are always saved, even when left default ( for backwards compatibility reasons )
+		self.assertTrue( ".parm_halfSize" in savedAttrNames, msg = " ".join( savedAttrNames ) ) # This test can be removed if we decide our parameters don't require a special case
+	
 				
 	def tearDown( self ) :
 
@@ -2030,6 +2088,7 @@ class TestParameterisedHolder( IECoreMaya.TestCase ) :
 			"test/IECoreMaya/connectedNodeReference.ma",
 			"test/IECoreMaya/connectedNodeReference2.ma",
 			"test/IECoreMaya/meshParameterIO.ma",
+			"test/IECoreMaya/shouldSaveAttributes.ma",
 		] :
 
 			if os.path.exists( f ) :
