@@ -1,6 +1,17 @@
+
+* Modified behaviour of shouldSave method of ParameterisedHolder, which controls which attributes are saved to file
+  - previously:
+	* GenericAttributes which would cause crashes skipped
+	* everything else forced to always be written
+  - now
+	* GenericAttributes which would cause crashes skipped
+	* attributes in the AttributeNameToParameterMap forced to always be written
+    * anything else uses default Maya behaviour ( write only if changed from default )
+ ( This was motivated by attributes created by mtoa, which would be ignored if unused on normal Maya objects, but were always saved on Cortex objects, and then caused problems if mtoa was not present on load )
+
 Bug Fixes :
 
-* Fixed Bug in MtoA Translator that was inialising shaders on instances when the aronld node was Null
+* Fixed Bug in MtoA Translator that was initialising shaders on instances when the arnold node was Null
 
 7.7.0 :
 
